# lcu-auto-ma

./: Cargo.toml  README.md  build.rs
src/: async_func.rs  lcu.rs  lcu2.rs  main.rs  worker.rs
src/lcu/: api.rs  entity.rs  mod.rs  utils.rs  winhook.rs
src/style/: icon_raw.rs  mod.rs
