[package]
name = "lcu-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

iced = { version = "0.4", default-features = false, features = ["glow", "tokio"]}
iced_native = "0.5.1"

[profile.release]
opt-level = "z"
lto = true