[package]
name = "lcu-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.0"
iced_native = "0.5.1"
lazy_static = "1.4.0"
serde_json = "1.0.85"


[dependencies.iced]
version = "0.4"
default-features = false
features = ["glow", "tokio"]


[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.winapi]
version = "0.3.9"
features = ["winuser"]

[dev-dependencies]
tokio-test = "*"
[profile.release]
opt-level = "z"
lto = true
